--- a/web/app/styles/_book-player.scss
+++ b/web/app/styles/_book-player.scss
@@ -1,7 +1,9 @@
 .book-player {
-  position: relative;
+  display: flex;
+  flex-direction: column;
 
-  header {
+  > header {
+    flex: 0 1 200px;
     margin-bottom: 0.5em;
     .cover-box {
       min-width: 65px;
@@ -24,36 +26,42 @@
         color: lighten( $title-color, 33% );
       }
     }
-  }
-  nav {
-    margin-top: 0.5em;
-  }
 
-  progressbar {
-    $text-color: #333;
-    .currentTime {
-      position: absolute;
-      left: 0;
-      right: 0;
-      text-align: center;
-    }
+    nav {
+      margin-top: 0.5em;
 
-    .progress {
-      margin: 0.25em 0;
+      progressbar {
+        $text-color: #333;
+        .currentTime {
+          position: absolute;
+          left: 0;
+          right: 0;
+          text-align: center;
+        }
 
-      .progress-bar {
-        color: $text-color;
+        .progress {
+          margin: 0.25em 0;
+
+          .progress-bar {
+            color: $text-color;
+          }
+        }
+
+        .section-info {
+          font-size: 12px;
+          color: $text-color;
+          .section-title {
+            text-align: center;
+            width: calc( 100% - 100px );
+            margin: 0 50px;
+          }
+        }
       }
     }
+  }
 
-    .section-info {
-      font-size: 12px;
-      color: $text-color;
-      .section-title {
-        text-align: center;
-        width: calc( 100% - 100px );
-        margin: 0 50px;
-      }
-    }
+  > article {
+    flex: 1 0 100%;
+    overflow-y: auto;
   }
 }
