--- a/web/app/views/book-player.html
+++ b/web/app/views/book-player.html
@@ -7,12 +7,15 @@
       <h1>{{BookService.currentBook.title}}</h1>
       <h2>{{BookService.currentBook.author}}</h2>
     </div>
+    <nav>
+      <button ng-disabled="!BookService.currentBook" ng-click="BookService.restart( )" class="btn btn-lg glyphicon glyphicon-fast-backward btn-default"></button>
+      <button ng-disabled="!BookService.currentBook" ng-click="BookService.skip(-15)" class="btn btn-lg glyphicon glyphicon-minus btn-default">15</button>
+      <button ng-disabled="!BookService.currentBook" ng-click="toogle()" class="btn btn-lg  glyphicon" ng-class="{'glyphicon-play': !BookService.playing, 'glyphicon-pause': BookService.playing, 'btn-primary': !BookService.playing, 'btn-warning': BookService.playing }"></button>
+      <button ng-disabled="!BookService.currentBook" ng-click="BookService.skip(15)" class="btn btn-lg  glyphicon glyphicon-plus btn-default">15</button>
+      <progressbar></progressbar>
+    </nav>
   </header>
-  <nav>
-    <button ng-disabled="!BookService.currentBook" ng-click="BookService.restart( )" class="btn btn-lg glyphicon glyphicon-fast-backward btn-default"></button>
-    <button ng-disabled="!BookService.currentBook" ng-click="BookService.skip(-15)" class="btn btn-lg glyphicon glyphicon-minus btn-default">15</button>
-    <button ng-disabled="!BookService.currentBook" ng-click="toogle()" class="btn btn-lg  glyphicon" ng-class="{'glyphicon-play': !BookService.playing, 'glyphicon-pause': BookService.playing, 'btn-primary': !BookService.playing, 'btn-warning': BookService.playing }"></button>
-    <button ng-disabled="!BookService.currentBook" ng-click="BookService.skip(15)" class="btn btn-lg  glyphicon glyphicon-plus btn-default">15</button>
-    <progressbar></progressbar>
-  </nav>
+  <article>
+    <bookcontent/>
+  </article>
 </section>
