--- a/web/app/views/bookcontent.html
+++ b/web/app/views/bookcontent.html
@@ -1,7 +1,7 @@
 <div id="book-content">
-  <div id="book-context-content" ng-show="bookContentViewType == 'content'"></div>
+  <div id="book-context-content" ng-show="bookContentViewType == 'context'" ng-click="gotoSegment($event)"> </div>
 
-  <div id="book-cartoon-content" ng-show="bookContentViewType == 'cartoon'"></div>
+  <div id="book-cartoon-content" ng-show="bookContentViewType == 'cartoon'"> </div>
 
-  <div id="book-plain-content"   ng-show="bookContentViewType == 'plain'"></div>
+  <div id="book-plain-content"   ng-show="bookContentViewType == 'plain'"> </div>
 </div>
