doubleclick on segment text now skips to that segment

--- a/web/app/views/bookcontent.html
+++ b/web/app/views/bookcontent.html
@@ -1,5 +1,5 @@
 <div id="book-content">
-  <div id="book-context-content" ng-show="bookContentViewType == 'context'" ng-click="gotoSegment($event)"> </div>
+  <div id="book-context-content" ng-show="bookContentViewType == 'context'" ng-click="gotoSegment($event)" ng-dblclick="gotoSegment($event)"> </div>
 
   <div id="book-cartoon-content" ng-show="bookContentViewType == 'cartoon'"> </div>
 
