Ionic: Load bookshelf

--- a/mobile/www/views/bookshelf.html
+++ b/mobile/www/views/bookshelf.html
@@ -1,7 +1,7 @@
-<ion-view title="Boghylde">
+<ion-view view-title="Boghylde">
   <ion-content>
     <div class="list">
-      <a href="#/book-player/{{book.id}}" class="open-book item ng-repeat="book in books"">
+      <a href="#/book-player/{{book.id}}" class="open-book item" ng-repeat="book in books">
         <div class="img-box">
           <img ng-src="http://bookcover.e17.dk/{{ book.id }}_h75.jpg" src="images/blankbookcover.png" />
         </div>
@@ -11,9 +11,9 @@
         </div>
         <div class="download-buttons-box">
           <button class="btn glyphicon glyphicon-download" ng-show="!book.downloaded && !book.downloading" ng-click="cacheBook($event, book.id)" title="Download til offline"></button>
-    
+
           <button class="btn glyphicon glyphicon-remove" ng-show="!book.downloaded && book.downloading" ng-click="cancelBookCaching($event, book.id)" title="Stop download"></button>
-    
+
           <button class="btn glyphicon glyphicon-remove-circle" ng-show="book.downloaded" ng-click="clearBookCache($event, book.id)" title="Fjern fra offline brug"></button>
         </div>
         <div class="progress" ng-show="book.downloading !== undefined && !book.downloaded">
