--- a/mobile/www/views/bookshelf.html
+++ b/mobile/www/views/bookshelf.html
@@ -1,15 +1,11 @@
 <ion-view view-title="Boghylde">
   <ion-content>
-    <div class="list">
-      <a href="#/book-player/{{book.id}}" class="open-book item" ng-repeat="book in books">
-        <div class="img-box">
-          <img ng-src="http://bookcover.e17.dk/{{ book.id }}_h75.jpg" src="images/blankbookcover.png" />
-        </div>
-        <div class="book-title-box">
-          <div class="book-title">{{ book.title }}</div>
-          <div class="book-author">{{ book.author }}</div>
-        </div>
-        <div class="download-buttons-box">
+    <ion-list>
+      <ion-item href="#/book-player/{{book.id}}" class="open-book item item-thumbnail-left" ng-repeat="book in books">
+        <img ng-src="http://bookcover.e17.dk/{{ book.id }}_h75.jpg" src="images/blankbookcover.png" style="width: auto; height: auto;" />
+        <h2 class="book-title">{{ book.title }}</h2>
+        <p class="book-author">{{ book.author }}</p>
+        <div class="download-buttons-box" ng-if="false">
           <button class="btn glyphicon glyphicon-download" ng-show="!book.downloaded && !book.downloading" ng-click="cacheBook($event, book.id)" title="Download til offline"></button>
 
           <button class="btn glyphicon glyphicon-remove" ng-show="!book.downloaded && book.downloading" ng-click="cancelBookCaching($event, book.id)" title="Stop download"></button>
@@ -21,8 +17,8 @@
             <span class="sr-only">{{book.downloading}}%</span>
           </div>
         </div>
-      </a>
-    </div>
+      </ion-item>
+    </ion-list>
     <button type="button" class="btn btn-default" ng-click="nextPage()">Flere bøger</button>
   </ion-content>
 </ion-view>
